--- a/404_Mafia/index.html
+++ b/404_Mafia/index.html
@@ -80,7 +80,7 @@
     <h2>Syllabus</h2>
     <div class="notes-list">
       <div class="note">
-        <a href="MSc syllabus.pf" target="_blank">Syllabus</a>
+        <a href="MSc syllabus.pdf" target="_blank">Syllabus</a>
       </div>
       
     </div>
@@ -212,4 +212,5 @@
 </footer>
 </body>
 </html>
+
 
