--- a/404_Mafia/lab.html
+++ b/404_Mafia/lab.html
@@ -4,20 +4,62 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>404 Mafiaah | LAb </title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+<link rel="icon" type="logo.jpg" href="logo.jpg">
   <style>
+     :root {
+      --bg-color: #f2f4f7;
+      --text-color: #333;
+      --card-bg: #fff;
+      --note-bg: #e9f0fa;
+    }
+
+    body.dark {
+      --bg-color: #121212;
+      --text-color: #e0e0e0;
+      --card-bg: #1e1e1e;
+      --note-bg: #2a2a2a;
+    }
+
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: #f2f4f7;
+      background: var(--bg-color);
       padding: 20px;
+      color: var(--text-color);
+      transition: background 0.3s, color 0.3s;
     }
 
-    h1 {
-      text-align: center;
-      color: #333;
-      margin-bottom: 30px;
-    }
+   h1 {
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 60px;
+    animation: glitch 4s infinite;
+  }
 
+  @keyframes glitch {
+    0% { color: red; text-shadow: 2px 2px blue; }
+    5% { color: blue; text-shadow: -2px -2px red; }
+    10% { color: black; text-shadow: 2px -2px red; }
+    15% { color: red; text-shadow: -2px 2px blue; }
+    20% { color: blue; text-shadow: 2px 2px red; }
+    25% { color: white; text-shadow: none; }
+    100% { color: white; text-shadow: none; }
+  }
+
+    .toggle-btn {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      padding: 8px 14px;
+      background: var(--note-bg);
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
     .subject {
       background: #fff;
       border-radius: 10px;
@@ -70,11 +112,38 @@
         flex-direction: column;
       }
     }
+
+    
+    footer {
+      padding: 20px 0;
+      text-align: center;
+    }
+
+ .social-icons {
+      text-align: center;
+      margin-top: 10px;
+    }
+    .social-icons a {
+      margin: 0 10px;
+      color: #666;
+      font-size: 28px;
+      transition: color 0.3s;
+    }
+    .social-icons a:hover {
+      color: #007bff;
+    }
+
+    @media (max-width: 600px) {
+      .notes-list {
+        flex-direction: column;
+      }
+    }
   </style>
 </head>
 <body>
 
   <h1>404 Mafiaah || LAB</h1>
+  <button class="toggle-btn" onclick="toggleDarkMode()">🌙 Dark Mode</button>
 
   <div class="subject">
     <h2>Web Lab</h2>
@@ -115,7 +184,24 @@
         </div><hr>
 
 <footer>
-  <p style="text-align: center; color: #666;">&copy; 404 Mafiaah || Prathap B .</p>
-</footer>
+    <p style="text-align: center; color: #666;">&copy; 404 Mafiaah || Prathap B</p>
+    <div class="social-icons">
+      <a href="https://wa.me/9745457037" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://instagram.com/yourusername" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/yourgithubusername" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+  </footer>
+
+<script>
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark');
+      const btn = document.querySelector('.toggle-btn');
+      if (document.body.classList.contains('dark')) {
+        btn.textContent = '☀ Light Mode';
+      } else {
+        btn.textContent = '🌙 Dark Mode';
+      }
+    }
+  </script>
 </body>
 </html>
