--- a/404_Mafia/index.html
+++ b/404_Mafia/index.html
@@ -4,26 +4,71 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>404 Mafiaah </title>
-  <style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+<link rel="icon" type="logo.jpg" href="logo.jpg">
+
+   <style>
+    :root {
+      --bg-color: #f2f4f7;
+      --text-color: #333;
+      --card-bg: #fff;
+      --note-bg: #e9f0fa;
+    }
+
+    body.dark {
+      --bg-color: #121212;
+      --text-color: #e0e0e0;
+      --card-bg: #1e1e1e;
+      --note-bg: #2a2a2a;
+    }
+
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: #f2f4f7;
+      background: var(--bg-color);
       padding: 20px;
+      color: var(--text-color);
+      transition: background 0.3s, color 0.3s;
     }
 
-    h1 {
-      text-align: center;
-      color: #333;
-      margin-bottom: 30px;
+   h1 {
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 60px;
+    animation: glitch 4s infinite;
+  }
+
+  @keyframes glitch {
+    0% { color: red; text-shadow: 2px 2px blue; }
+    5% { color: blue; text-shadow: -2px -2px red; }
+    10% { color: black; text-shadow: 2px -2px red; }
+    15% { color: red; text-shadow: -2px 2px blue; }
+    20% { color: blue; text-shadow: 2px 2px red; }
+    25% { color: white; text-shadow: none; }
+    100% { color: white; text-shadow: none; }
+  }
+
+    .toggle-btn {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      padding: 8px 14px;
+      background: var(--note-bg);
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background 0.3s;
     }
 
     .subject {
-      background: #fff;
+      background: var(--card-bg);
       border-radius: 10px;
       padding: 20px;
       margin-bottom: 30px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      transition: background 0.3s;
     }
 
     .subject h2 {
@@ -38,7 +83,7 @@
     }
 
     .note {
-      background: #e9f0fa;
+      background: var(--note-bg);
       padding: 15px;
       border-radius: 8px;
       flex: 1 1 200px;
@@ -46,7 +91,7 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-      transition: transform 0.3s;
+      transition: transform 0.3s, background 0.3s;
     }
 
     .note:hover {
@@ -55,7 +100,7 @@
 
     .note a {
       text-decoration: none;
-      color: #333;
+      color: var(--text-color);
       font-weight: bold;
       margin-top: 10px;
     }
@@ -70,9 +115,37 @@
         flex-direction: column;
       }
     }
+
+    footer {
+      padding: 20px 0;
+      text-align: center;
+    }
+
+ .social-icons {
+      text-align: center;
+      margin-top: 10px;
+    }
+    .social-icons a {
+      margin: 0 10px;
+      color: #666;
+      font-size: 28px;
+      transition: color 0.3s;
+    }
+    .social-icons a:hover {
+      color: #007bff;
+    }
+
+    @media (max-width: 600px) {
+      .notes-list {
+        flex-direction: column;
+      }
+    }
+
+
   </style>
 </head>
 <body>
+  <button class="toggle-btn" onclick="toggleDarkMode()">🌙 Dark Mode</button>
 
   <h1>404 Mafiaah</h1>
 
@@ -207,10 +280,27 @@
           <div class="note">
         <a href="#" target="_blank">Assignment</a>
         </div><hr>
+
 <footer>
-  <p style="text-align: center; color: #666;">&copy; 404 Mafiaah || Prathap B .</p>
-</footer>
+    <p style="text-align: center; color: #666;">&copy; 404 Mafiaah || Prathap B</p>
+    <div class="social-icons">
+      <a href="https://wa.me/9745457037" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://instagram.com/yourusername" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/yourgithubusername" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+  </footer>
+
+<script>
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark');
+      const btn = document.querySelector('.toggle-btn');
+      if (document.body.classList.contains('dark')) {
+        btn.textContent = '☀ Light Mode';
+      } else {
+        btn.textContent = '🌙 Dark Mode';
+      }
+    }
+  </script>
+
 </body>
 </html>
-
-
