--- a/404_Mafia/lab.html
+++ b/404_Mafia/lab.html
@@ -187,8 +187,8 @@
     <p style="text-align: center; color: #666;">&copy; 404 Mafiaah || Prathap B</p>
     <div class="social-icons">
       <a href="https://wa.me/9745457037" target="_blank"><i class="fab fa-whatsapp"></i></a>
-      <a href="https://instagram.com/yourusername" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://github.com/yourgithubusername" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://instagram.com/prathap_b_369" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/prathap929master" target="_blank"><i class="fab fa-github"></i></a>
     </div>
   </footer>
 
