--- a/404_Mafia/index.html
+++ b/404_Mafia/index.html
@@ -6,7 +6,7 @@
   <title>404 Mafiaah </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-<link rel="icon" type="logo.jpg" href="logo.jpg">
+<link rel="icon" type="lo.jpg" href="logo.jpg">
 
    <style>
     :root {
@@ -304,3 +304,4 @@
 
 </body>
 </html>
+
