--- a/404_Mafia/index.html
+++ b/404_Mafia/index.html
@@ -6,7 +6,7 @@
   <title>404 Mafiaah </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-<link rel="icon" type="lo.jpg" href="logo.jpg">
+<link rel="icon" type="logo.jpg" href="logo.jpg">
 
    <style>
     :root {
@@ -147,7 +147,7 @@
 <body>
   <button class="toggle-btn" onclick="toggleDarkMode()">🌙 Dark Mode</button>
 
-  <h1>404 Mafiaah</h1>
+  <h1>404-Mafiaah</h1>
 
   <div class="subject">
     <h2>Syllabus</h2>
@@ -304,4 +304,5 @@
 
 </body>
 </html>
+
 
