--- a/404_Mafia/index.html
+++ b/404_Mafia/index.html
@@ -147,7 +147,7 @@
 <body>
   <button class="toggle-btn" onclick="toggleDarkMode()">🌙 Dark Mode</button>
 
-  <h1>404-Mafiaah</h1>
+  <h1>404 Mafiaah</h1>
 
   <div class="subject">
     <h2>Syllabus</h2>
@@ -304,5 +304,6 @@
 
 </body>
 </html>
+
 
 
