--- a/404_Mafia/index.html
+++ b/404_Mafia/index.html
@@ -280,6 +280,10 @@
           <div class="note">
         <a href="#" target="_blank">Assignment</a>
         </div><hr>
+        <hr>
+          <div class="note">
+        <a href="Question.html" target="_blank">Question Paper</a>
+        </div><hr>
 
 <footer>
     <p style="text-align: center; color: #666;">&copy; 404 Mafiaah || Prathap B</p>
@@ -304,6 +308,3 @@
 
 </body>
 </html>
-
-
-
