--- a/404_Mafia/lab.html
+++ b/404_Mafia/lab.html
@@ -8,7 +8,7 @@
 
 <link rel="icon" type="logo.jpg" href="logo.jpg">
   <style>
-     :root {
+    :root {
       --bg-color: #f2f4f7;
       --text-color: #333;
       --card-bg: #fff;
@@ -60,12 +60,14 @@
       font-weight: bold;
       transition: background 0.3s;
     }
+
     .subject {
-      background: #fff;
+      background: var(--card-bg);
       border-radius: 10px;
       padding: 20px;
       margin-bottom: 30px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      transition: background 0.3s;
     }
 
     .subject h2 {
@@ -80,7 +82,7 @@
     }
 
     .note {
-      background: #e9f0fa;
+      background: var(--note-bg);
       padding: 15px;
       border-radius: 8px;
       flex: 1 1 200px;
@@ -88,7 +90,7 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-      transition: transform 0.3s;
+      transition: transform 0.3s, background 0.3s;
     }
 
     .note:hover {
@@ -97,7 +99,7 @@
 
     .note a {
       text-decoration: none;
-      color: #333;
+      color: var(--text-color);
       font-weight: bold;
       margin-top: 10px;
     }
@@ -113,7 +115,6 @@
       }
     }
 
-    
     footer {
       padding: 20px 0;
       text-align: center;
@@ -138,6 +139,8 @@
         flex-direction: column;
       }
     }
+
+
   </style>
 </head>
 <body>
@@ -177,7 +180,7 @@
 
 <hr>
   <div class="note">
-        <a href="index.html" target="_blank">Home</a>
+        <a href="index.html">Home</a>
         </div><hr>
          
 <footer>
