--- a/404_Mafia/lab.html
+++ b/404_Mafia/lab.html
@@ -153,11 +153,9 @@
     <div class="notes-list">
       <div class="note">
         <a href="notes/lab/Lab question - Cycle 1.pdf" target="_blank">Lab Cycle 1</a>
-        <a href="notes/lab/Lab question - Cycle 1.pdf" target="_blank">Clck</a>
       </div>
       <div class="note">
         <a href="notes/lab/Lab question - Cycle II.pdf" target="_blank">Lab Cycle 2</a>
-        <a href="notes/lab/Lab question - Cycle II.pdf" target="_blank">Click</a>
       </div>
       <div class="note">
         <a href="https://github.com/prathap929master/MSC-html.git" target="_blank">Code (Secret)</a>
@@ -172,10 +170,16 @@
     <div class="notes-list">
 <div class="note">
         <a href="notes/lab/Lab 1-10.pdf" target="_blank">Lab Cycle 1</a>
-        <a href="notes/lab/Lab 1-10.pdf" target="_blank">Click</a>
       </div>
-       
+      <div class="note">
+        <a href="notes/lab/LabQp21-32 - 2025.pdf" target="_blank">Lab Cycle 2</a>
       </div>
+
+      <div class="note">
+      <a href="code/java2.html">{Code} labcycle 2</a>
+      </div>
+      </div>
+
     </div>
 
 <hr>
