--- a/404_Mafia/subject/java.html
+++ b/404_Mafia/subject/java.html
@@ -192,6 +192,54 @@
     </div>
   </div>
 
+<!-- Existing JAVA section remains as-is -->
+
+<!-- Module 2 -->
+<div class="subject">
+  <h2>Module 2</h2>
+  <div class="notes-list">
+    <div class="note"><a href="../notes/Java/mod2/Abstract class - lab Example.pdf" target="_blank">Abstract class - lab Example</a></div>
+    <div class="note"><a href="../notes/Java/mod2/Abstract class.pdf" target="_blank">Abstract class</a></div>
+    <div class="note"><a href="../notes/Java/mod2/Constructor.pdf" target="_blank">Constructor</a></div>
+    <div class="note"><a href="../notes/Java/mod2/Constructors - Example.pdf" target="_blank">Constructors - Example</a></div>
+    <div class="note"><a href="../notes/Java/mod2/Interface.pdf" target="_blank">Interface</a></div>
+    <div class="note"><a href="../notes/Java/mod2/String.pdf" target="_blank">String</a></div>
+    <div class="note"><a href="../notes/Java/mod2/Super keyword - lab esample.pdf" target="_blank">Super keyword - lab example</a></div>
+    <div class="note"><a href="../notes/Java/mod2/Super Keyword.pdf" target="_blank">Super Keyword</a></div>
+  </div>
+</div>
+
+<!-- Module 3 -->
+<div class="subject">
+  <h2>Module 3</h2>
+  <div class="notes-list">
+    <div class="note"><a href="../notes/Java/mod3/exceptions.pdf" target="_blank">Exceptions</a></div>
+    <div class="note"><a href="../notes/Java/mod3/Multithreading.pdf" target="_blank">Multithreading</a></div>
+    <div class="note"><a href="../notes/Java/mod3/Package.pdf" target="_blank">Package</a></div>
+  </div>
+</div>
+
+<!-- Module 4 -->
+<div class="subject">
+  <h2>Module 4</h2>
+  <div class="notes-list">
+    <div class="note"><a href="../notes/Java/mod4/Event Delegation Model.pdf" target="_blank">Event Delegation Model</a></div>
+    <div class="note"><a href="../notes/Java/mod4/Swing.pdf" target="_blank">Swing</a></div>
+  </div>
+</div>
+
+<!-- Module 5 -->
+<div class="subject">
+  <h2>Module 5</h2>
+  <div class="notes-list">
+    <div class="note"><a href="../notes/Java/mod5/JDBC.pdf" target="_blank">JDBC</a></div>
+    <div class="note"><a href="../notes/Java/mod5/JDBC (1).pdf" target="_blank">JDBC (1)</a></div>
+  </div>
+</div>
+
+
+
+
 <hr>
   <div class="note">
         <a href="../index.html">Home</a>
