--- a/404_Mafia/subject/sem2/dbms.html
+++ b/404_Mafia/subject/sem2/dbms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>404 Mafiaah | Web </title>
+  <title>404 Mafiaah | Java </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 <link rel="icon" type="logo.jpg" href="logo.jpg">
@@ -145,47 +145,30 @@
 </head>
 <body>
 
-  <h1>404 Mafiaah || WEB</h1>
+  <h1>404 Mafiaah || DBMS</h1>
   <button class="toggle-btn" onclick="toggleDarkMode()">🌙 Dark Mode</button>
 
-  <div class="subject">
-    <h2>Web</h2>
+<div class="subject">
+    <h2>DBMS</h2>
     <div class="notes-list">
-<div class="note">
-        <a href="../notes/web/internet.pdf" target="_blank">Internet</a>
-        <a href="../notes/web/internet.pdf" target="_blank">Click</a>
-      </div>
-       <div class="note">
-        <a href="../notes/web/Html.pdf" target="_blank">Html</a>
-        <a href="../notes/web/Html.pdf" target="_blank">click</a>
-      </div>
-      <div class="note">
-        <a href="../notes/web/css.pdf" target="_blank">CSS </a>
-        <a href="../notes/web/css.pdf" target="_blank">Click</a>
-      </div>
-       <div class="note">
-        <a href="../notes/web/PHP Basic.pdf" target="_blank">PHP</a>
-        <a href="../notes/web/PHP Basic.pdf" target="_blank">click </a>
-      </div>
-      <div class="note">
-       <a href="../notes/web/internet_merged.pdf" target="_blank">Internet / HTML / CSS / PHP</a>
-        <a href="../notes/web/internet_merged.pdf" target="_blank">Merged</a>
-      </div>
+      <div class="note"><a href="../../notes/sem2/dbms/Anomalies.pdf">Anomalies</a></div>
+      <div class="note"><a href="../../notes/sem2/dbms/Chapter01 DBMS.pdf">Chapter 01 - DBMS</a></div>
+      <div class="note"><a href="../../notes/sem2/dbms/Chapter02 DBMS.pdf">Chapter 02 - DBMS</a></div>
+      <div class="note"><a href="../../notes/sem2/dbms/Chapter04 DBMS-Aggregation-generalization-specialization.pdf">Chapter 04 - Aggregation, Generalization, Specialization</a></div>
+      <div class="note"><a href="../../notes/sem2/dbms/Constrains.pdf">Constraints</a></div>
+      <div class="note"><a href="../../notes/sem2/dbms/DBMS-SQL data manipulation.pdf">SQL Data Manipulation</a></div>
+      <div class="note"><a href="../../notes/sem2/dbms/Normalisation.pdf">Normalization</a></div>
+      <div class="note"><a href="../../notes/sem2/dbms/Rdbms.pdf">RDBMS</a></div>
+      <div class="note"><a href="../../notes/sem2/dbms/Relational Algebra.pdf">Relational Algebra</a></div>
+      <div class="note"><a href="../../notes/sem2/dbms/relational calculus.pdf">Relational Calculus</a></div>
+      <div class="note"><a href="../../notes/sem2/dbms/Timestamp.pdf">Timestamp</a></div>
+      <div class="note"><a href="../../notes/sem2/dbms/Transactions.pdf">Transactions</a></div>
     </div>
   </div>
-
-   <div class="subject">
-   <h2>MOdule 2</h2>
-    <div class="notes-list">
-      <div class="note"><a href="../notes/web/mod2/Function php.pdf" target="_blank">Functions</a></div>
-      <div class="note"><a href="../notes/web/mod2/Java Script.pdf" target="_blank">Java Script</Script></a></div>
-    </div>
-  </div>
-
 
 <hr>
   <div class="note">
-        <a href="../index.html">Home</a>
+        <a href="../../index.html">Home</a>
         </div><hr>
          
 <footer>
