--- a/404_Mafia/subject/os.html
+++ b/404_Mafia/subject/os.html
@@ -167,34 +167,58 @@
         <a href="../notes/os/Operating System Concepts 9e.pdf" target="_blank">All in one </a>
       </div>
     </div>
-  </div>
+  </div> 
 
   <div class="subject">
     <h2>Operating System</h2>
     <div class="notes-list">
+   <div class="note">
+        <a href="../notes/os/Deadlock.pdf" target="_blank">Deadlock</a>
+      </div>
       <div class="note">
-        <a href="../notes/os/OS -1.pdf" target="_blank">Note 1 </a>
+        <a href="../notes/os/Deadlock Detection.pdf" target="_blank">Deadlock Detection</a>
+      </div>
+      <div class="note">
+        <a href="../notes/os/Methods for handling deadlock.pdf" target="_blank">Handling Deadlock</a>
+      </div>
+      <div class="note">
+        <a href="../notes/os/Synchronization_ppt.pdf" target="_blank">Synchronization</a>
+      </div>
+      <div class="note">
+        <a href="../notes/os/RAG Algorithm.pdf" target="_blank">RAG Algorithm</a>
+      </div>
+      <div class="note">
+        <a href="../notes/os/OS_Text_Chapter-1.pdf" target="_blank">OS Text Chapter 1</a>
+      </div>
+      <div class="note">
+        <a href="../notes/os/OS_Text_Chapter-2.pdf" target="_blank">OS Text Chapter 2</a>
+      </div>
+      <div class="note">
+        <a href="../notes/os/OS_Text_Chapter-3.pdf" target="_blank">OS Text Chapter 3</a>
+      </div>
+      <div class="note">
+        <a href="../notes/os/OS_Text_Chapter-4.pdf" target="_blank">OS Text Chapter 4</a>
+      </div>
+      <div class="note">
+        <a href="../notes/os/os memory.pdf" target="_blank">OS Memory (Extra)</a>
       </div>
 
-       <div class="note">
-        <a href="../notes/os/os -2.pdf" target="_blank">Note 2 </a>
-      </div>
-       <div class="note">
-        <a href="../notes/os/os -3.pdf" target="_blank">Note 3 </a>
-      </div>
-       <div class="note">
-        <a href="../notes/os/os-4.pdf" target="_blank">Note 4 </a>
-      </div>
-       <div class="note">
-        <a href="../notes/os/os-5.pdf" target="_blank">Note 5 </a>
-      </div>
-       <div class="note">
-        <a href="../notes/os/os-6.pdf" target="_blank">Note 6 </a>
-      </div>
+    </div>
+  </div>
 
+  <div class="subject">
+   <h2>Memory</h2>
+    <div class="notes-list">
+      
+      <div class="note"><a href="../notes/os/memory/Fragmentation.pdf" target="_blank">Fragmentation</a></div>
+      <div class="note"><a href="../notes/os/memory/Memory_Mgmt_1.pdf" target="_blank">Memory Management 1</a></div>
+      <div class="note"><a href="../notes/os/memory/Page Replacement.pdf" target="_blank">Page Replacement</a></div>
+      <div class="note"><a href="../notes/os/memory/Protection.pdf" target="_blank">Protection</a></div>
+      <div class="note"><a href="../notes/os/memory/Segmentation.pdf" target="_blank">Segmentation</a></div>
+      <div class="note"><a href="../notes/os/memory/Virtual_Memory.pdf" target="_blank">Virtual Memory</a></div>
 
-      </div>
-    </div>  
+    </div>
+  </div>
 
 <hr>
   <div class="note">
