--- a/404_Mafia/index.html
+++ b/404_Mafia/index.html
@@ -165,12 +165,20 @@
 
   <!-- Subjects -->
   <div class="subject">
-    <h2>M1</h2>
+    <h2>Semester 1</h2>
     <div class="notes-list">
       <a href="subject/java.html">JAVA</a>
       <a href="subject/os.html">Operating System</a>
       <a href="subject/web.html">WEB</a>
       <a href="subject/maths.html">Mathematics</a>
+    </div>
+  </div>
+
+    <div class="subject">
+    <h2>Semester 2</h2>
+    <div class="notes-list">
+      <a href="subject/sem2/dbms.html">DBMS</a>
+      
     </div>
   </div>
 
