--- a/404_Mafia/index.html
+++ b/404_Mafia/index.html
@@ -6,7 +6,6 @@
   <title>404 Mafiaah</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="icon" type="image/jpg" href="logo.jpg">
-
   <style>
    
     :root {
@@ -152,8 +151,10 @@
 </head>
 <body>
   <button class="toggle-btn" onclick="toggleDarkMode()">🌙 Dark Mode</button>
+  
 
   <h1>404 Mafiaah</h1>
+<h5 style="text-align: right; color: #ffffff;">  last updated: 24-Aug-2025 <br>9:00 pm</h5>
 
   <!-- Syllabus -->
   <div class="subject">
