--- a/404_Mafia/lab.html
+++ b/404_Mafia/lab.html
@@ -158,10 +158,12 @@
         <a href="notes/lab/Lab question - Cycle II.pdf" target="_blank">Lab Cycle 2</a>
       </div>
       <div class="note">
-        <a href="https://github.com/prathap929master/MSC-html.git" target="_blank">Code (Secret)</a>
+        <a href="https://github.com/prathap929master/MSC-html.git" target="_blank">Code Github</a>
         <a href="https://github.com/prathap929master/MSC-html.git" target="_blank">Lab Cycle 1 </a>
       </div>
-       
+       <div class="note">
+        <a href="https://github.com/prathap929master/MSC-html/tree/main/LAB" target="_blank">Lab Cycle 2 Code</a>
+      </div>
     </div>
   </div>
 
