--- a/404_Mafia/Question.html
+++ b/404_Mafia/Question.html
@@ -157,12 +157,34 @@
       <div class="note">
         <a href="notes/Qp/maths int1.jpg" target="_blank">First Internel</a>
       </div>
-    
-
-    
+    </div>
+  </div>
+ <div class="subject">
+    <h2>Web</h2>
+    <div class="notes-list">
+      <div class="note">
+        <a href="notes/Qp/web.jpg" target="_blank">First Internel</a>
+      </div>
     </div>
   </div>
 
+ <div class="subject">
+    <h2>Java</h2>
+    <div class="notes-list">
+      <div class="note">
+        <a href="notes/Qp/java.jpg" target="_blank">First Internel</a>
+      </div>
+    </div>
+  </div>
+
+   <div class="subject">
+    <h2>OS</h2>
+    <div class="notes-list">
+      <div class="note">
+        <a href="notes/Qp/os.jpg" target="_blank">First Internel</a>
+      </div>
+    </div>
+  </div>
 
   <hr>
 <div class="note">
